--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
       <label for="born">Date of birth:</label>
       <input id="born" class="form-control" type="date">
     </div>
-    <p id=bio>
-      <span class="#person"></span> loves eating <span class="#favoriteFood"></span> while jamming out to <span class="#music"></span> on their birthday, which is <span class="#born"></span>.
-    </p>
+    <button type="submit" class="btn">Show me the facts!</button>
+    <div id="bio">
+      <p>
+        <span class="#person"></span> loves eating <span class="#favoriteFood"></span> while jamming out to <span class="#music"></span> on their birthday, which is <span class="#born"></span>.
+      </p>
+    </div>
   </div>
 </body>
 </html>
